# crossChain-backend

./: .gitignore  Cargo.toml  LICENSE  config.toml
src/: abi.rs  event.rs  main.rs
src/chain/: abi.rs  mod.rs
