[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.7", features = ["ws"] }
eyre = "0.6.8"
dotenv = "0.15.0"
serde = "1.0.163"
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.4"
